--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/nightOwlzDev/secretproject#readme",
   "dependencies": {
     "@types/node": "^14.14.28",
+    "express": "^4.17.1",
     "fastify": "^3.12.0"
   },
   "devDependencies": {
